# ChangeLog for app-editors/emacs-cvs
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  01 Apr 2007; Ulrich Mueller <ulm@kph.uni-mainz.de>
  emacs-cvs-22.0.96-r1.ebuild:
  Test for previous symlink and eselect the same slot (only for non-masked
  version; people using hardmasked versions should know what they are doing).

  30 Mar 2007; Ulrich Mueller <ulm@kph.uni-mainz.de>
  +emacs-cvs-22.0.96-r1.ebuild, +emacs-cvs-22.0.9999-r9.ebuild,
  +emacs-cvs-23.0.0-r5.ebuild:
  RDEPEND on x11-misc/emacs-desktop.

  30 Mar 2007; Ulrich Mueller <ulm@kph.uni-mainz.de>
  emacs-cvs-22.0.96.ebuild, emacs-cvs-22.0.9999-r8.ebuild,
  emacs-cvs-23.0.0-r4.ebuild:
  Info rebuild moved to separate function.

  28 Mar 2007; Ulrich Mueller <ulm@kph.uni-mainz.de>
  emacs-cvs-22.0.96.ebuild, emacs-cvs-22.0.9999-r8.ebuild,
  emacs-cvs-23.0.0-r4.ebuild:
  Rebuild Info dir file in pkg_postrm, too.

  28 Mar 2007; Ulrich Mueller <ulm@kph.uni-mainz.de>
  emacs-cvs-22.0.96.ebuild, emacs-cvs-22.0.9999-r8.ebuild,
  emacs-cvs-23.0.0-r4.ebuild:
  Rebuild Info dir file in pkg_postinst.

  26 Mar 2007; Christian Faulhammer <opfer@gentoo.org>
  emacs-cvs-22.0.9999-r8.ebuild:
  readded the lost configuration line for USE=gtk

  26 Mar 2007; Christian Faulhammer <opfer@gentoo.org>
  emacs-cvs-22.0.96.ebuild, emacs-cvs-22.0.9999-r8.ebuild,
  emacs-cvs-23.0.0-r4.ebuild:
  extending einfo output when GTK+ toolkit is chosen

  26 Mar 2007; Christian Faulhammer <opfer@gentoo.org>
  emacs-cvs-22.0.96.ebuild, emacs-cvs-22.0.9999-r8.ebuild,
  emacs-cvs-23.0.0-r4.ebuild:
  added some echo commands to pretty-print the output

  26 Mar 2007; Christian Faulhammer <opfer@gentoo.org>
  emacs-cvs-22.0.96.ebuild, emacs-cvs-22.0.9999-r8.ebuild,
  emacs-cvs-23.0.0-r4.ebuild:
  added some comments for the tricky lines

  26 Mar 2007; Christian Faulhammer <opfer@gentoo.org>
  emacs-cvs-22.0.96.ebuild, emacs-cvs-22.0.9999-r8.ebuild,
  emacs-cvs-23.0.0-r4.ebuild: