@@ -11,53 +11,40 @@ MD5 33cdd958f1be433095a69bff6be18148 files/emacs-cvs-freebsd-sparc.patch 475
 RMD160 a8e6e3f2bc014979fd269a027835a65520c12417 files/emacs-cvs-freebsd-sparc.patch 475
 SHA256 43584ea923e6c7221e69d1d6a14d55d386565c5decd067a62acc58af522c803b files/emacs-cvs-freebsd-sparc.patch 475
 DIST emacs-22.0.96.tar.gz 37846686 RMD160 d980f7f8ec6c646a9b741718284b081987f9d73c SHA1 e2942bdbf693a0814fcc3b34d5ae55765d5d4ad8 SHA256 a9fa904e00e09d8b68e701edda208bd274053d26d0b50d97d6c977084e5c307d
+DIST emacs-22.0.97.tar.gz 37900456 RMD160 3bd5abe6fdf4e1574b6fda4b2e85cfbf171fbab4 SHA1 60a50581ac93fc850225a929cc0c04dec0e51f36 SHA256 1b2cd679a1cbb1b6971291beac5d68ae55be538691c1fc8164f936899b8a913b
 EBUILD emacs-cvs-22.0.96-r1.ebuild 7869 RMD160 221ce33047757f143e7193f1b5aba94fd2910479 SHA1 8f504134899a147e009fd68b01db61c06b4ec906 SHA256 d2fa037c97956edd9f0269b7802e83290725033965e6823d3aa021573c57c68e
 MD5 c799181b18e209f9c44e39aafb348d74 emacs-cvs-22.0.96-r1.ebuild 7869
 RMD160 221ce33047757f143e7193f1b5aba94fd2910479 emacs-cvs-22.0.96-r1.ebuild 7869
 SHA256 d2fa037c97956edd9f0269b7802e83290725033965e6823d3aa021573c57c68e emacs-cvs-22.0.96-r1.ebuild 7869
-EBUILD emacs-cvs-22.0.96.ebuild 7684 RMD160 15591e699ab285477ee0b8f3d71997f1714b4194 SHA1 2ea11f5f4b6b1518eff99c260b2f58e7d62c479b SHA256 9f1455c373ee67f35c15682666e60e128c5f8de21fe27d3d61567d22526c5d00
-MD5 6d91a364dc46281cd4eea6a9df4309e5 emacs-cvs-22.0.96.ebuild 7684
-RMD160 15591e699ab285477ee0b8f3d71997f1714b4194 emacs-cvs-22.0.96.ebuild 7684
-SHA256 9f1455c373ee67f35c15682666e60e128c5f8de21fe27d3d61567d22526c5d00 emacs-cvs-22.0.96.ebuild 7684
-EBUILD emacs-cvs-22.0.9999-r8.ebuild 8002 RMD160 c21d854e299b31f63d2cfa5a1ba98ebc2ab424a0 SHA1 ca6d159acccb285a32a5efc3730005bb09f3a94a SHA256 6e4c90df4ecfede617d4f7be8ab65fb69dee07160b71e6ddc9d7a57c67e88a47
-MD5 dcf76f94a98e37d077859468ec9c6629 emacs-cvs-22.0.9999-r8.ebuild 8002
-RMD160 c21d854e299b31f63d2cfa5a1ba98ebc2ab424a0 emacs-cvs-22.0.9999-r8.ebuild 8002
-SHA256 6e4c90df4ecfede617d4f7be8ab65fb69dee07160b71e6ddc9d7a57c67e88a47 emacs-cvs-22.0.9999-r8.ebuild 8002
+EBUILD emacs-cvs-22.0.97.ebuild 7869 RMD160 221ce33047757f143e7193f1b5aba94fd2910479 SHA1 8f504134899a147e009fd68b01db61c06b4ec906 SHA256 d2fa037c97956edd9f0269b7802e83290725033965e6823d3aa021573c57c68e
+MD5 c799181b18e209f9c44e39aafb348d74 emacs-cvs-22.0.97.ebuild 7869
+RMD160 221ce33047757f143e7193f1b5aba94fd2910479 emacs-cvs-22.0.97.ebuild 7869
+SHA256 d2fa037c97956edd9f0269b7802e83290725033965e6823d3aa021573c57c68e emacs-cvs-22.0.97.ebuild 7869
 EBUILD emacs-cvs-22.0.9999-r9.ebuild 8024 RMD160 f2feae88c218087a58a963935cb4d1173e083cb6 SHA1 df3b2f320a98113d81d6387f9e813458ba2f0d59 SHA256 7403e1c387954e5a74b57b37535f79bdf8b352816f0ba49597fafcdae8eafceb
 MD5 3e08ce66bbf5c843209419a52e123a7a emacs-cvs-22.0.9999-r9.ebuild 8024
 RMD160 f2feae88c218087a58a963935cb4d1173e083cb6 emacs-cvs-22.0.9999-r9.ebuild 8024
 SHA256 7403e1c387954e5a74b57b37535f79bdf8b352816f0ba49597fafcdae8eafceb emacs-cvs-22.0.9999-r9.ebuild 8024
-EBUILD emacs-cvs-23.0.0-r4.ebuild 8260 RMD160 0668f4dbd4773a2d7f908e08d9b02586d3853f9d SHA1 fa959e28a4e66bac783e18179a4664779d207bbc SHA256 8795a67d87f5256f2124ae3cdce69e6c64ed50f79587d61625afbff65357507a
-MD5 0580e5db1304b6fb136697ee33ba9faa emacs-cvs-23.0.0-r4.ebuild 8260
-RMD160 0668f4dbd4773a2d7f908e08d9b02586d3853f9d emacs-cvs-23.0.0-r4.ebuild 8260
-SHA256 8795a67d87f5256f2124ae3cdce69e6c64ed50f79587d61625afbff65357507a emacs-cvs-23.0.0-r4.ebuild 8260
 EBUILD emacs-cvs-23.0.0-r5.ebuild 8282 RMD160 ba51a8d194d691956894b95dcbe06c089bac6aa9 SHA1 1c9bc6142b155924e9a6e2835d6fdf6e3738ce99 SHA256 1f589d76040bc4396c0a48f58976871dc2e99ccd887e3356b1a68de70c763e89
 MD5 221bf426e39ac603678a76f29585ea0c emacs-cvs-23.0.0-r5.ebuild 8282
 RMD160 ba51a8d194d691956894b95dcbe06c089bac6aa9 emacs-cvs-23.0.0-r5.ebuild 8282
 SHA256 1f589d76040bc4396c0a48f58976871dc2e99ccd887e3356b1a68de70c763e89 emacs-cvs-23.0.0-r5.ebuild 8282
-MISC ChangeLog 8834 RMD160 31cdbfb3d4b659fc3996e6730fb1cbae20f18dd1 SHA1 77a61880a4914a36dad3052a74423918e8f396aa SHA256 6654d85c72db91c403d662d265e04944ee3c28c5965ae4ead7db6e87ad256524
-MD5 211bc0a55c991769b32e9e6f65e89443 ChangeLog 8834
-RMD160 31cdbfb3d4b659fc3996e6730fb1cbae20f18dd1 ChangeLog 8834
-SHA256 6654d85c72db91c403d662d265e04944ee3c28c5965ae4ead7db6e87ad256524 ChangeLog 8834
+MISC ChangeLog 9056 RMD160 e3d6621ea39e074ed956093a264ae4b1a0fe7a51 SHA1 dc53dcab543b0c24f7ac173e992ec1ca0a52eea2 SHA256 b9ab422b60737aa277b2edb5db4d86fd72089d9aabbfe615ce5151a35740adec
+MD5 6ff516cadca4b86211cc3c2fc5a49a75 ChangeLog 9056
+RMD160 e3d6621ea39e074ed956093a264ae4b1a0fe7a51 ChangeLog 9056
+SHA256 b9ab422b60737aa277b2edb5db4d86fd72089d9aabbfe615ce5151a35740adec ChangeLog 9056
 MISC metadata.xml 158 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 SHA1 61f6eff9729cd87a725c2a70c81aca4270a17fc4 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab
 MD5 fcd33d07e4ee719b01157946734f4fe8 metadata.xml 158
 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 metadata.xml 158
 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab metadata.xml 158
-MD5 01d52a9a1e26b99e5687f6898db299ed files/digest-emacs-cvs-22.0.96 247
-RMD160 3a36a623e9a4eeebc76ce3315de31dc60f49457e files/digest-emacs-cvs-22.0.96 247
-SHA256 1319658529d77893d7ccf241ca85d5e8c0805818f9ec7a8f92b99fff821c92c1 files/digest-emacs-cvs-22.0.96 247
 MD5 01d52a9a1e26b99e5687f6898db299ed files/digest-emacs-cvs-22.0.96-r1 247
 RMD160 3a36a623e9a4eeebc76ce3315de31dc60f49457e files/digest-emacs-cvs-22.0.96-r1 247
 SHA256 1319658529d77893d7ccf241ca85d5e8c0805818f9ec7a8f92b99fff821c92c1 files/digest-emacs-cvs-22.0.96-r1 247
-MD5 d41d8cd98f00b204e9800998ecf8427e files/digest-emacs-cvs-22.0.9999-r8 0
-RMD160 9c1185a5c5e9fc54612808977ee8f548b2258d31 files/digest-emacs-cvs-22.0.9999-r8 0
-SHA256 e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855 files/digest-emacs-cvs-22.0.9999-r8 0
+MD5 a45c1cc2431a74255c981575cf033f94 files/digest-emacs-cvs-22.0.97 247
+RMD160 1a034da94a1d0ea15deae209e53da79099b0ed97 files/digest-emacs-cvs-22.0.97 247
+SHA256 2cf2e7a1662db28db007818b2a58d1a4156216dcfdc2f8cee0dbba49517476a3 files/digest-emacs-cvs-22.0.97 247
 MD5 d41d8cd98f00b204e9800998ecf8427e files/digest-emacs-cvs-22.0.9999-r9 0
 RMD160 9c1185a5c5e9fc54612808977ee8f548b2258d31 files/digest-emacs-cvs-22.0.9999-r9 0
 SHA256 e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855 files/digest-emacs-cvs-22.0.9999-r9 0
-MD5 d41d8cd98f00b204e9800998ecf8427e files/digest-emacs-cvs-23.0.0-r4 0
-RMD160 9c1185a5c5e9fc54612808977ee8f548b2258d31 files/digest-emacs-cvs-23.0.0-r4 0
-SHA256 e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855 files/digest-emacs-cvs-23.0.0-r4 0
 MD5 d41d8cd98f00b204e9800998ecf8427e files/digest-emacs-cvs-23.0.0-r5 0
 RMD160 9c1185a5c5e9fc54612808977ee8f548b2258d31 files/digest-emacs-cvs-23.0.0-r5 0
 SHA256 e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855 files/digest-emacs-cvs-23.0.0-r5 0
