@@ -1,3 +1,0 @@
-MD5 09fabcb5becb050acf1c88639330dac6 emacs-22.0.96.tar.gz 37846686
-RMD160 d980f7f8ec6c646a9b741718284b081987f9d73c emacs-22.0.96.tar.gz 37846686
-SHA256 a9fa904e00e09d8b68e701edda208bd274053d26d0b50d97d6c977084e5c307d emacs-22.0.96.tar.gz 37846686
