@@ -1,0 +1,3 @@
+MD5 bfcda2615b9761d1dc546e1c907c584a emacs-22.0.97.tar.gz 37900456
+RMD160 3bd5abe6fdf4e1574b6fda4b2e85cfbf171fbab4 emacs-22.0.97.tar.gz 37900456
+SHA256 1b2cd679a1cbb1b6971291beac5d68ae55be538691c1fc8164f936899b8a913b emacs-22.0.97.tar.gz 37900456
