@@ -2,6 +2,11 @@
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  04 Apr 2007; Christian Faulhammer <opfer@gentoo.org>
+  -emacs-cvs-22.0.96.ebuild, +emacs-cvs-22.0.97.ebuild,
+  -emacs-cvs-22.0.9999-r8.ebuild, -emacs-cvs-23.0.0-r4.ebuild:
+  revision bump for newer pretest and clean up
+
   01 Apr 2007; Ulrich Mueller <ulm@kph.uni-mainz.de>
   emacs-cvs-22.0.96-r1.ebuild:
   Test for previous symlink and eselect the same slot (only for non-masked
